--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "bpmn-js": "^3.0.4",
     "chai": "^4.2.0",
+    "dmn-js": "^6.0.0",
     "eslint": "^5.10.0",
     "eslint-plugin-bpmn-io": "^0.6.0",
     "karma": "^3.1.4",
